# rustyroute

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  build.rs  deny.toml  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dco.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: audit.yaml  ci.yaml  clickup.yaml
src/: data.rs  graph.rs  lib.rs  loader.rs
tests/: audit_workflow.rs  build_artifacts.rs  build_helpers.rs  ci_workflow.rs  data_module.rs  downstream_consumer_smoke.rs  env_data_dir.rs  feature_matrix.rs  graph_load.rs  graph_types.rs  group_assignment.rs  lint_state.rs  pre_commit_config.rs  pre_commit_e2e.rs  tampered_gpkg_panic.rs  vendored_data.rs
tests/downstream_consumer/: Cargo.toml
tests/downstream_consumer/src/: lib.rs
tests/downstream_consumer/tests/: smoke.rs
