[package]
name = "rustyroute"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
description = "Maritime sea-routing library for Rust."
readme = "README.md"
homepage = "https://github.com/spotship/rustyroute"
repository = "https://github.com/spotship/rustyroute"
documentation = "https://docs.rs/rustyroute"
license = "EUPL-1.2"
keywords = ["routing", "maritime", "searoute", "geospatial", "shipping"]
categories = ["algorithms", "science::geo"]

[dependencies]
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }

[build-dependencies]
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck", "std"] }
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }

[dev-dependencies]
# Used by tests/tampered_gpkg_panic.rs to exercise the full build pipeline
# (real gpkg_io reader -> csr -> groups) against a tampered .gpkg copy.
# Reuses the bundled SQLite amalgamation already built for [build-dependencies].
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
tempfile = "3"
