[package]
name = "rustyroute"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
description = "Maritime sea-routing library for Rust."
readme = "README.md"
homepage = "https://github.com/spotship/rustyroute"
repository = "https://github.com/spotship/rustyroute"
documentation = "https://docs.rs/rustyroute"
license = "EUPL-1.2"
keywords = ["routing", "maritime", "searoute", "geospatial", "shipping"]
categories = ["algorithms", "science::geo"]

[features]
default = ["data-50km"]
data-5km = []
data-10km = []
data-20km = []
data-50km = []
data-100km = []
# `cli` is a forward-declared meta-feature for the future binary
# (ENG-4xxx). Today it has no dep:clap term because clap is not yet a
# dependency — it only turns on every data resolution.
cli = ["data-5km", "data-10km", "data-20km", "data-50km", "data-100km"]

[dependencies]
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
thiserror = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"

[build-dependencies]
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck", "std"] }
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }

[dev-dependencies]
# Used by tests/tampered_gpkg_panic.rs to exercise the full build pipeline
# (real gpkg_io reader -> csr -> groups) against a tampered .gpkg copy.
# Reuses the bundled SQLite amalgamation already built for [build-dependencies].
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
tempfile = "3"
